--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -37,6 +37,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
       - name: Run GoReleaser
+        run: |
+          cd api
         uses: goreleaser/goreleaser-action@v2
         with:
           # either 'goreleaser' (default) or 'goreleaser-pro'
@@ -45,7 +47,3 @@ jobs:
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - uses: actions/upload-artifact@v2
-        with:
-          name: my-artifact
-          path: dist/*_linux_amd64.tar.gz
