feat: 配置下发相关接口完成
Signed-off-by: kl7sn <mex7.0828@gmail.com>

--- a/api/config/local.toml
+++ b/api/config/local.toml
@@ -20,6 +20,11 @@ level = "panic"
 maxIdleConns = 50
 maxOpenConns = 100
 
+[redis.default]
+addrs = "127.0.0.1:6379"
+writeTimeout = "3s"
+password = ""
+
 [app]
 secretKey = "ASDFASDFASDF" # hashStatecode
 rootURL = "http://localhost:9001"
