fix: add config demo

--- a/ui/package.json
+++ b/ui/package.json
@@ -61,11 +61,14 @@
     "crypto-js": "^4.1.1",
     "lodash": "^4.17.11",
     "moment": "^2.25.3",
+    "monaco-editor": "^0.31.1",
+    "monaco-editor-webpack-plugin": "^7.0.1",
     "omit.js": "^2.0.2",
     "react": "^17.0.0",
     "react-dev-inspector": "^1.1.1",
     "react-dom": "^17.0.0",
     "react-helmet-async": "^1.0.4",
+    "react-monaco-editor": "^0.46.0",
     "umi": "^3.5.0",
     "umi-serve": "^1.9.10"
   },
