--- a/api/config/default.toml
+++ b/api/config/default.toml
@@ -16,13 +16,13 @@ resourceFile = './config/resource.yaml'
 [mysql.default]
 connMaxLifetime = "300s"
 debug = true
-dsn = "root:123456@tcp(localhost:3306)/mocro?charset=utf8mb4&collation=utf8mb4_general_ci&parseTime=True&loc=Local&readTimeout=1s&timeout=1s&writeTimeout=3s"
+dsn = "root:123456@tcp(mysql:3307)/mocro?charset=utf8mb4&collation=utf8mb4_general_ci&parseTime=True&loc=Local&readTimeout=1s&timeout=1s&writeTimeout=3s"
 level = "panic"
 maxIdleConns = 50
 maxOpenConns = 100
 
 [redis.default]
-addrs= "127.0.0.1:6379"
+addr = "redis:6380"
 writeTimeout = "3s"
 password = ""
 
@@ -88,6 +88,6 @@ name = "mysession"
 size = 10
 debug = true
 network = "tcp"
-addr = ""
+addr = "redis:6380"
 password = ""
 keypairs = ""
