fix: go:embed test pass

--- a/api/config/local.toml
+++ b/api/config/local.toml
@@ -22,7 +22,7 @@ maxIdleConns = 50
 maxOpenConns = 100
 
 [redis.default]
-addrs = "127.0.0.1:6379"
+addr = "127.0.0.1:6379"
 writeTimeout = "3s"
 password = ""
 
