--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -4,7 +4,7 @@
   "repoType": "github",
   "repoHost": "https://github.com",
   "files": [
-    "README.md"
+    "README.md",
     "README-CN.md"
   ],
   "imageSize": 64,
