--- a/api/config/resource.yaml
+++ b/api/config/resource.yaml
@@ -1,5 +1,5 @@
 permission:
-  - name: Logs
+  - name: log
     path: /query
     api:
       - name: 获取日志列表
@@ -11,13 +11,13 @@ permission:
       - name: 获取日志tables
         method: GET
         path: /api/query/tables
-  - name: Config
+  - name: configure
     path: /configure
-  - name: Setting
+  - name: systemSettings
     path: /sys
     children:
       - path: /sys/instances
-        name: Database
+        name: database
         api:
         - name: 查询数据库连接
           method: GET
@@ -32,7 +32,7 @@ permission:
           method: DELETE
           path: /api/sys/instances/:id
       - path: /sys/clusters
-        name: Cluster
+        name: cluster
         api:
         - name: 查询数据库连接
           method: GET
