--- a/data/fluent-bit/conf/fluent-bit.conf
+++ b/data/fluent-bit/conf/fluent-bit.conf
@@ -2,11 +2,11 @@
     Flush         1
     Log_Level     debug
     Daemon        off
-    Parsers_File  parsers.conf
+    Parsers_File  parser.conf
     HTTP_Server   On
     HTTP_Listen   0.0.0.0
     HTTP_Port     2020
 
 @INCLUDE input.conf
 @INCLUDE output.conf
-
+@INCLUDE filter-modify.conf
