fix: Optimized front-end packaging

--- a/ui/package.json
+++ b/ui/package.json
@@ -5,7 +5,7 @@
   "description": "An out-of-box UI solution for enterprise applications",
   "scripts": {
     "analyze": "cross-env ANALYZE=1 umi build",
-    "build": "umi build",
+    "build": "umi build NODE_OPTIONS=--max_old_space_size=4096",
     "deploy": "npm run build && npm run gh-pages",
     "dev": "npm run start",
     "gh-pages": "gh-pages -d dist",
@@ -86,7 +86,7 @@
     "@umijs/fabric": "^2.6.2",
     "@umijs/openapi": "^1.1.14",
     "@umijs/plugin-blocks": "^2.0.5",
-    "@umijs/plugin-esbuild": "^1.0.1",
+    "@umijs/plugin-esbuild": "^1.4.1",
     "@umijs/plugin-openapi": "^1.2.0",
     "@umijs/preset-ant-design-pro": "^1.2.0",
     "@umijs/preset-dumi": "^1.1.7",
