nginx logger docker-compose

--- a/data/nginx/conf/nginx.conf
+++ b/data/nginx/conf/nginx.conf
@@ -15,7 +15,7 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    log_format main '{"time": "$time_iso8601", "client_ip": "$realip_remote_addr","x_forward_for": "$remote_addr", "method": "$request_method", "url": "$request_uri","version": "$server_protocol", "status": $status, "body_bytes_sent": $body_bytes_sent,"http_referer": "$http_referer", "http_user_agent": "$http_user_agent", "request_length":$request_length, "request_time": $request_time,"upstream_addr" : "$upstream_addr", "upstream_response_length": "$upstream_response_length","upstream_response_time": $upstream_response_time, "upstream_status": $upstream_status, "host" : "$host"}';
+    log_format main '{"time": "$time_iso8601", "client_ip": "$realip_remote_addr","x_forward_for": "$remote_addr", "method": "$request_method", "url": "$request_uri","version": "$server_protocol", "status": $status, "body_bytes_sent": $body_bytes_sent,"http_referer": "$http_referer", "http_user_agent": "$http_user_agent", "request_length":$request_length, "request_time": $request_time, "host" : "$host"}';
 
     access_log  /var/log/nginx/access.log  main;
 
