--- a/data/prometheus/alertmanager-configmap.yaml
+++ b/data/prometheus/alertmanager-configmap.yaml
@@ -3,11 +3,8 @@ kind: ConfigMap
 metadata:
   name: alertmanager-config
   namespace: mogo
-  labels:
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: EnsureExists
 data:
-  alertmanager.yml: |-
+  alertmanager.yaml: |-
     global:
 
     route:
