--- a/data/prometheus/alertmanager-service.yaml
+++ b/data/prometheus/alertmanager-service.yaml
@@ -4,9 +4,7 @@ metadata:
   name: alertmanager
   namespace: mogo
   labels:
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-    kubernetes.io/name: "Alertmanager"
+    name: "alertmanager"
 spec:
   ports:
     - name: http
@@ -14,5 +12,4 @@ spec:
       protocol: TCP
       targetPort: 9093
   selector:
-    k8s-app: alertmanager
-  type: "ClusterIP"
+    app: alertmanager
