--- a/api/config/default.toml
+++ b/api/config/default.toml
@@ -42,7 +42,7 @@ password = ""
 secretKey = "ASDFASDFASDF"
 rootURL = "http://localhost:9001"
 baseURL = "/api/admin/login/"
-hiddenFields = ["_cluster_", "_log_agent_", "_node_ip_", "_node_name_", "_time_second_", "_time_nanosecond_"]
+hiddenFields = ["_cluster_", "_log_agent_", "_node_ip_", "_node_name_", "_time_second_", "_time_nanosecond_", "_source_"]
 defaultFields = ["_namespace_","_container_name_","_pod_name_","_time_second_"]
 
 [auth]
