fix: config.d->conf.d

--- a/data/all-in-one/alertmanager/alertmanager.yaml
+++ b/data/all-in-one/alertmanager/alertmanager.yaml
@@ -8,4 +8,4 @@ route:
 receivers:
   - name: 'webhook'
     webhook_configs:
-      - url: 'http://xxx:8080/public/prometheus/alerts'
+      - url: 'http://api:19001/api/v1/prometheus/alerts'
