--- a/docker-compose.m1.yml
+++ b/docker-compose.m1.yml
@@ -144,7 +144,7 @@ services:
       - mogo-net
     image: fhalim/prom2click:latest
     command:
-      - '-ch.dsn=tcp://clickhouse:9000?username=root&password=shimo&read_timeout=10&writer_timeou=10&debug=true'
+      - '-ch.dsn=tcp://clickhouse:9000?username=root&password=shimo&read_timeout=10&writer_timeout=10&debug=true'
       - '-ch.db=metrics'
       - '-ch.table=samples'
     expose:
