--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -114,7 +114,7 @@ services:
       - ./data/all-in-one/clickhouse/database:/var/lib/clickhouse
       - ./data/all-in-one/clickhouse/logs:/var/log
       - ./data/all-in-one/clickhouse/conf/users.xml:/etc/clickhouse-server/users.xml
-      - ./data/all-in-one/clickhouse/conf/config.d:/etc/clickhouse-server/config.d
+      - ./data/all-in-one/clickhouse/conf/conf.d:/etc/clickhouse-server/conf.d
     restart: always
     links:
       - kafka
@@ -143,7 +143,7 @@ services:
       - mogo-net
     image: fhalim/prom2click:latest
     command:
-      - '-ch.dsn=tcp://clickhouse:9000?username=root&password=shimo&read_timeout=10&writer_timeou=10&debug=true'
+      - '-ch.dsn=tcp://clickhouse:9000?username=root&password=shimo&read_timeout=10&writer_timeout=10&debug=true'
       - '-ch.db=metrics'
       - '-ch.table=samples'
     expose:
