fix: add rule menu

--- a/data/all-in-one/mogo/config/resource.yaml
+++ b/data/all-in-one/mogo/config/resource.yaml
@@ -13,6 +13,11 @@ permission:
         path: /api/query/tables
   - name: alarm
     path: /alarm
+    children:
+      - name: rules
+        path: /alarm/rules
+#      - name: notifications
+#        path: /alarm/notifications
   - name: configure
     path: /configure
   - name: systemSettings
