fix: docker compose add mock process
Signed-off-by: kl7sn <mex7.0828@gmail.com>

--- a/docker-compose.m1.yml
+++ b/docker-compose.m1.yml
@@ -204,7 +204,7 @@ services:
       - ./data/all-in-one/mogo/config:/mogo/config
       - ./data/all-in-one/prometheus/rules:/mogo/rules
     command: [ '/bin/sh', '-c', './bin/mogo' ]
-  init:
+  mock:
     image: sevennt/mogo:master
     networks:
       - mogo-net
