--- a/data/all-in-one/mogo/config/docker.toml
+++ b/data/all-in-one/mogo/config/docker.toml
@@ -1,26 +1,26 @@
 [app]
-secretKey = "ASDFASDFASDF" # hashStatecode
+secretKey = "secretKey" # hashStatecode
 rootURL = "http://localhost:19001"
 baseURL = "/api/admin/login/"
 hiddenFields = ["_cluster_", "_log_agent_", "_node_ip_", "_node_name_", "_time_second_", "_time_nanosecond_","_source_","_container_name_","_namespace_","_pod_name_"]
 defaultFields = ["_namespace_","_container_name_","_pod_name_","_time_second_"]
-
-[logger.default]
-level = "debug"
+permissionFile = './config/resource.yaml'
 
 [server.http]
 host = "0.0.0.0"
 port = 19001
 embedPath = "dist"
+maxAge = 86400
 
 [server.governor]
 host = "0.0.0.0"
-port = 9003
+port = 19011
 
-[permission]
-resourceFile = './config/resource.yaml'
+[logger]
+level = "debug"
+name = "mogo.log"
 
-[mysql.default]
+[mysql]
 connMaxLifetime = "300s"
 debug = true
 dsn = "root:shimo@tcp(mysql:13306)/mocro?charset=utf8mb4&collation=utf8mb4_general_ci&parseTime=True&loc=Local&readTimeout=1s&timeout=1s&writeTimeout=3s"
@@ -28,33 +28,16 @@ level = "panic"
 maxIdleConns = 50
 maxOpenConns = 100
 
-[redis.default]
-addr = "redis:6380"
-writeTimeout = "3s"
-password = ""
-
 [auth]
-# Login cookie name
-loginCookieName = "mogo_session"
-# The lifetime (days) an authenticated user can be inactive before being required to login at next visit. Default is 7 days.
-loginMaximumInactiveLifetimeDays = 7
-# The maximum lifetime (days) an authenticated user can be logged in since login time before being required to login. Default is 30 days.
-loginMaximumLifetimeDays = 30
-# How often should auth tokens be rotated for authenticated users when being active. The default is each 10 minutes.
-tokenRotationIntervalMinutes = 10
-# Set to true to disable (hide) the login form, useful if you use OAuth
-disableLoginForm = false
-# Set to true to disable the signout link in the side menu. useful if you use auth.proxy
-disableSignoutMenu = false
-# URL to redirect the user to after sign out
-signoutRedirectUrl = ""
-# Set to true to attempt login with OAuth automatically, skipping the login screen.
-# This setting is ignored if multiple OAuth providers are configured.
-oauthAutoLogin = false
-# OAuth state max age cookie duration. Defaults to 60 seconds.
-oauthStateCookieMaxAge = 60
-# limit of api_key seconds to live before expiration
-apiKeyMaxSecondsToLive = -1
+mode = "memstore" # redis memstore
+name = "mogo_session"
+debug = true
+Keypairs = "secret"
+# if use mode redis
+# redisSize = 10
+# redisNetwork = "tcp"
+# redisAddr = ""
+# redisPassword = ""
 
 [[auth.tps]]
 typ = "github"
@@ -83,16 +66,6 @@ apiUrl = "https://gitlab.com/api/v4"
 allowedDomains = []
 teamIds = []
 allowedOrganizations = []
-
-[session]
-mode = "redis"
-name = "mysession"
-size = 10
-debug = true
-network = "tcp"
-addr = "redis:6380"
-password = ""
-keypairs = ""
 
 [defaultCh]
 dsn="tcp://clickhouse:9000?username=root&password=shimo&read_timeout=10&writer_timeou=10&debug=true"
