docs: documents related to alarm module
Signed-off-by: kl7sn <mex7.0828@gmail.com>

--- a/data/k8s/prometheus/alertmanager-configmap.yaml
+++ b/data/k8s/prometheus/alertmanager-configmap.yaml
@@ -17,4 +17,4 @@ data:
     receivers:
     - name: 'webhook'
       webhook_configs:
-      - url: 'http://xxx:8080/public/prometheus/alerts'
+      - url: 'http://mogo:19001/public/prometheus/alerts'
