--- a/data/all-in-one/mogo/config/docker.toml
+++ b/data/all-in-one/mogo/config/docker.toml
@@ -68,4 +68,4 @@ teamIds = []
 allowedOrganizations = []
 
 [defaultCh]
-dsn="tcp://clickhouse:9000?username=root&password=shimo&read_timeout=10&writer_timeou=10&debug=true"
+dsn="tcp://clickhouse:9000?username=root&password=shimo&read_timeout=10&writer_timeout=10&debug=true"
