--- a/ui/package.json
+++ b/ui/package.json
@@ -69,6 +69,7 @@
     "react-dev-inspector": "^1.1.1",
     "react-dom": "^17.0.0",
     "react-helmet-async": "^1.0.4",
+    "react-infinite-scroll-component": "6.1.0",
     "react-monaco-editor": "^0.46.0",
     "react-resizable": "^3.0.4",
     "umi": "^3.5.0",
