--- a/ui/package.json
+++ b/ui/package.json
@@ -72,6 +72,7 @@
     "react-infinite-scroll-component": "6.1.0",
     "react-monaco-editor": "^0.46.0",
     "react-resizable": "^3.0.4",
+    "styled-components": "^5.3.5",
     "umi": "^3.5.0",
     "umi-serve": "^1.9.10"
   },
